2013-02-07 Nala Ginrut <nalaginrut@gmail.com>
	* artanis/db.scm: support dbi