@@ -1,2 +1,5 @@
 2013-02-07 Nala Ginrut <nalaginrut@gmail.com>
 	* artanis/db.scm: support dbi
+
+2013-03-26 Nala Ginrut <nalaginrut@gmail.com>
+	* artanis/ssql.scm: added ssql
